# ut61b

./: .clang-format  .gitignore  60-ch9325.rules  CMakeLists.txt  LICENSE.txt  README.md  autosuspend.sh
.github/workflows/: build-and-test.yml
cmake/: Findhidapi.cmake
src/: ch9325.cpp  ch9325.hpp  fs9922_dmm3.cpp  fs9922_dmm3.hpp  fs9922_dmm3_test.cpp  main.cpp
